static/css/base.css
@import url('https://fonts.googleapis.com/css2?family=Lato&family=Rubik+Mono+One&display=swap');


/* Animations */
@keyframes slideInFromLeft {
    0% {
        transform: translateX(-100%);
        opacity: 0;
    }

    100% {
        transform: translateX(0);
        opacity: 1;
    }
}

.slide-from-left {
    animation: slideInFromLeft 1s ease-out;
}

@keyframes slideInFromRight {
    0% {
        transform: translateX(100%);
        opacity: 0;
    }

    100% {
        transform: translateX(0);
        opacity: 1;
    }
}

.slide-from-right {
    animation: slideInFromRight 1s ease-out;
}

@keyframes bounceIn {

    0%,
    20%,
    50%,
    80%,
    100% {
        transform: translateY(0);
    }

    40% {
        transform: translateY(-30px);
    }

    60% {
        transform: translateY(-15px);
    }
}

.bounce-in {
    animation: bounceIn 1s ease-out;
}


/* General */
body {
    background-color: #000814;
    color: white;
    font-family: 'Lato', sans-serif;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 100;
    background-color: #000814;
}

.inherit-color {
    color: inherit !important;
}

.nav-element {
    font-size: 110%;
}

.nav-link {
    padding: 1rem;
}

a {
    color: inherit;
    text-decoration: none;
}

a:hover {
    text-decoration: none;
    color: inherit;
}

.is-active {
    text-decoration: underline;
}

.logo-p {
    margin-bottom: 0px;
    color: #2DEDFA;
}

.logo {
    max-width: 300px;
}

.nav-p {
    color: #fff;
    margin-bottom: -5px;
    transition: color 0.2s ease-in-out;
}

.nav-p:hover {
    color: #00b4d8;
}

.nav-fa {
    font-size: 160%
}

.theme-color {
    color: #00b4d8;
}

.bg-color-secondary {
    background-color: #0d1b2a;
}

.contrast-grey {
    color: #adb5bd;
}

.orange-line {
    background: #fca311;
    height: 2px;
    margin: 10px;
}

.container-bag-checkout {
    margin-top: 140px;
}

/* Dropdown Profile */
.dropdown-content {
    display: none;
    position: absolute;
    z-index: 1;
    right: 120px;
    top: 50px;
    border-radius: 3px;
    position: absolute;
    width: 120px;
}

.dropdown-content a {
    color: whitesmoke;
    transition: color 0.2s ease-in-out;
}

.dropdown-content a:hover {
    color: #000814;
    background: linear-gradient(to bottom right, #5de0e6, #004aad);
}

.show {
    display: block;
}


/* Images */
.landing-img {
    width: 100%;
    height: 100%;
    background-image: url('https://res.cloudinary.com/dbui0ebjv/image/upload/v1703678174/AdobeStock_230617255_gmfqlb.jpg');
    background-position: center center;
    animation-name: scaleImage;
    animation-duration: 3s;
    animation-fill-mode: forwards;
}

@keyframes scaleImage {
    from {
        background-size: 100%;
    }

    to {
        background-size: 110%;
    }
}

.service-img {
    width: 100%;
    height: 700px;
    background-image: url('https://res.cloudinary.com/dbui0ebjv/image/upload/v1703700081/Unbenannt_16_ciqry8.png');
    background-size: cover;
    background-position: center center;
}

.contact-img {
    width: 100%;
    height: 400px;
    background-image: url('https://res.cloudinary.com/dbui0ebjv/image/upload/v1703845968/Design_ohne_Titel_1_fhxhsr.png');
    background-size: cover;
    background-position: center center;
}

.container-fluid-img {
    width: 100%;
    height: 400px;
    margin-right: auto;
    margin-left: auto;
    margin-bottom: 70px;
    margin-top: 65px;
}

.service-text {
    padding-left: 6%;
}

.cred-div {
    text-align: center;

    margin-bottom: 50px;
}


/* FB Mailchimp Section */
.fb-mailchimp {
    padding: 40px 0 40px;
}

.white-line-small {
    height: 3px;
    background: white;
    width: 30px;
}

#mc_embed_signup {
    background-color: #030303;
    clear: left;
}

#mc_embed_signup form {
    display: block;
    position: relative;
    text-align: left;
    margin: 0 !important;

}

#mc_embed_signup h2 {
    padding: 0;
    margin: -15px 0 !important;
}

#mc_embed_signup input {}

.white-line {
    height: 2px;
    background-color: white;
    width: 100%;
    margin-top: 60px
}


/* Custom Container */
.container-2 {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 20px 0px 20px 150px
}

.top,
.middle,
.bottom {
    width: 100%;
    text-align: center;
}

.top {
    align-self: flex-start;
}

.middle {
    align-self: center;
}

.bottom {
    align-self: flex-end;
}

.container-2>* {
    margin: 10px 0;
}


/* Subscription Plans */
.subscription-plan-style {
    border: solid 3px #adb5bd;
    border-radius: 15px;
    background: #0d1b2a;
    transition: background 0.3s ease;
}

.subscription-plan-style:hover {
    background: #415a77;
}

.special-offer {
    border: solid 3px #fca311;
}

.square-image {
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
    width: 100%;
    height: 120px;
    border-radius: 8px;
}

.square-image img {
    max-width: 100%;
    border-radius: 8px;
}

.sub-title {
    height: 70px;
}

.sub-description {
    min-height: 180px;
}

.sub-price {
    height: 70px;
}

.sub-details {
    height: 300px;
}

/* Messages */
.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.toast-body {
    background: #001d3d;
    min-height: 60px;
}

.btn-toast {
    background: #fca311 !important;
    border-radius: 5px !important;
    font-size: 90%;
    width: 30%;
    font-size: 15px !important;
    line-height: 30px !important;
}


/* Admin Access */
.hr-admin-border {
    border-top: 5px solid #17a2b8;
    margin: 0;
    padding: 0;
}

.preview {
    transition: transform 0.4s ease-in-out;/
}

.preview:hover {
    transform: scale(1.04);
}

.col-10-x {
    width: 86%;
}


/* Pagination Control */
a.page-link {
    background-color: #343a40;
    color: white;

}

.page-link {
    border: none;
}
/* ... */

